syntax = "proto3";

option csharp_namespace = "GrpcSample.Client";


message  GetPersonRequest{
	int64 id = 1;
}

message PersonResponse{
	string firstName = 1;
	string lastName = 2;
	int32 age = 3;

}


message GetPeopleRequest{

}

message PeopleResponse{
	repeated PersonResponse people = 1;
}



service PersonRepository{
	rpc GetPerson(GetPersonRequest) returns (PersonResponse);
	rpc GetPeople(GetPeopleRequest) returns (PeopleResponse);
}